<resources>
    <string name="app_name">Fisherman_Hanbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник рыбака</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="fish">Рыба</string>
    <string name="na">Наживка</string>
    <string name="sna">Снасти</string>
    <string name="pri">Прикормка</string>
    <string name="history">Рыбацкие истории</string>
    <string name="advice">Полезные советы</string>
</resources>