<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_fish"
            android:icon="@mipmap/ic_fish1"
            android:title="@string/fish" />
        <item
            android:id="@+id/id_na"
            android:icon="@mipmap/ic_fish1"
            android:title="@string/na" />
        <item
            android:id="@+id/id_sna"
            android:icon="@mipmap/ic_fish1"
            android:title="@string/sna" />
        <item
            android:id="@+id/id_pri"
            android:icon="@mipmap/ic_fish2"
            android:title="@string/pri" />
        <item
            android:id="@+id/id_history"
            android:icon="@mipmap/ic_fish2"
            android:title="@string/history" />
        <item
            android:id="@+id/id_advice"
            android:icon="@mipmap/ic_fish2"
            android:title="@string/advice" />
    </group>


</menu>